# sbv

./: .appveyor.yml  .ghci  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG  CHANGES.md  COPYRIGHT  INSTALL  LICENSE  Makefile  PATTERN_PLANS.md  README  README.md  RELEASENOTES  REWRITE_PLANS.md  SMTSolverVersions.md  Setup.hs  TODO  appveyor.yml  check  hlintReport.html  sbv.cabal
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  haskell-ci.yml  hlint.yml
Data/: SBV.hs
Data/SBV/: CVC4.hs  Char.hs  Client.hs  CodeGen.hs  Control.hs  Dynamic.hs  Either.hs  Examples.hs  Float.hs  GenTest.hs  Internals.hs  Lambda.hs  List.hs  Maybe.hs  Polynomial.hs  Rational.hs  RegExp.hs  SCase.hs  SEnum.hs  STree.hs  Sequence.hs  Set.hs  String.hs  Sum.hs  TP.hs  Trans.hs  Tuple.hs  Yices.hs  Z3.hs
Data/SBV/BitVectors/: AlgReals.hs  Bit.hs  Concrete.hs  Data.hs  Floating.hs  GenTest.hs  Kind.hs  Model.hs  Operations.hs  Optimize.hs  Polynomial.hs  PrettyNum.hs  Rounding.hs  STree.hs  SignCast.hs  Splittable.hs  Symbolic.hs
Data/SBV/Bridge/: ABC.hs  Boolector.hs  CVC4.hs  MathSAT.hs  Yices.hs  Z3.hs
Data/SBV/C/: C.hs
Data/SBV/Client/: BaseIO.hs  Mono.hs
Data/SBV/Compilers/: C.hs  CodeGen.hs
Data/SBV/Control/: BaseIO.hs  Mono.hs  Query.hs  Types.hs  Utils.hs
Data/SBV/Core/: AlgReals.hs  Concrete.hs  Data.hs  Floating.hs  Kind.hs  List.hs  Model.hs  Operations.hs  Sequence.hs  Sized.hs  SizedFloats.hs  Splittable.hs  String.hs  Symbolic.hs  TH.hs
Data/SBV/List/: Bounded.hs
Data/SBV/Provers/: ABC.hs  Bitwuzla.hs  Boolector.hs  CVC4.hs  CVC5.hs  DReal.hs  MathSAT.hs  OpenSMT.hs  Prover.hs  SExpr.hs  Yices.hs  Z3.hs  Z3_QBVF.hs
Data/SBV/SMT/: SMT.hs  SMTLib.hs  SMTLib1.hs  SMTLib2.hs  SMTLibNames.hs  Utils.hs
Data/SBV/Sequence/: Internal.hs
Data/SBV/TP/: Kernel.hs  List.hs  TP.hs  Tactics.hs  Utils.hs
Data/SBV/Tools/: BMC.hs  BVOptimize.hs  BoundedFix.hs  BoundedList.hs  CodeGen.hs  CrackNum.hs  ExpectedValue.hs  GenTest.hs  Induction.hs  KDKernel.hs  KDUtils.hs  KnuckleDragger.hs  NaturalInduction.hs  Optimize.hs  Overflow.hs  Polynomial.hs  Range.hs  SString.hs  STree.hs  Strings.hs  TP.hs  WeakestPreconditions.hs
Data/SBV/Trans/: Control.hs
Data/SBV/Utils/: Boolean.hs  CrackNum.hs  ExtractIO.hs  FloatConversionBounds.hs  Lib.hs  Numeric.hs  PrettyNum.hs  SBVTest.hs  SExpr.hs  TDiff.hs
DesignExplorations/: infinite-lists-and-coinduction.md
GHC/SrcLoc/: Compat.hs
GHC/Stack/: Compat.hs
ReadTheDocs/: Makefile
ReadTheDocs/source/: conf.py  index.rst
ReadTheDocs/source/introduction/: introduction.rst
ReadTheDocs/source/thanks/: thanks.rst
SBVBenchSuite/: SBVBench.hs  SBVBenchmark.hs
SBVBenchSuite/BenchSuite/Bench/: Bench.hs
SBVBenchSuite/BenchSuite/BitPrecise/: BitTricks.hs  BrokenSearch.hs  Legato.hs  MergeSort.hs  MultMask.hs  PrefixSum.hs
SBVBenchSuite/BenchSuite/CodeGeneration/: AddSub.hs  CRC_USB5.hs  Fibonacci.hs  GCD.hs  PopulationCount.hs  Uninterpreted.hs
SBVBenchSuite/BenchSuite/Crypto/: AES.hs  RC4.hs  SHA.hs
SBVBenchSuite/BenchSuite/Existentials/: CRCPolynomial.hs  Diophantine.hs
SBVBenchSuite/BenchSuite/Lists/: BoundedMutex.hs  Fibonacci.hs  Nested.hs
SBVBenchSuite/BenchSuite/Misc/: Auxiliary.hs  Enumerate.hs  Floating.hs  ModelExtract.hs  Newtypes.hs  NoDiv0.hs  Polynomials.hs  SetAlgebra.hs  SoftConstrain.hs  Tuple.hs
SBVBenchSuite/BenchSuite/Optimization/: Enumerate.hs  ExtField.hs  Instances.hs  LinearOpt.hs  Production.hs  VM.hs
SBVBenchSuite/BenchSuite/Overhead/: SBVOverhead.hs
SBVBenchSuite/BenchSuite/ProofTools/: BMC.hs  Fibonacci.hs  Strengthen.hs  Sum.hs
SBVBenchSuite/BenchSuite/Puzzles/: Birthday.hs  Coins.hs  Counts.hs  DogCatMouse.hs  Euler185.hs  Garden.hs  LadyAndTigers.hs  MagicSquare.hs  NQueens.hs  SendMoreMoney.hs  Sudoku.hs  U2Bridge.hs
SBVBenchSuite/BenchSuite/Queries/: AllSat.hs  CaseSplit.hs  Concurrency.hs  Enums.hs  FourFours.hs  GuessNumber.hs  Interpolants.hs  UnsatCore.hs
SBVBenchSuite/BenchSuite/Strings/: RegexCrossword.hs  SQLInjection.hs
SBVBenchSuite/BenchSuite/Transformers/: SymbolicEval.hs
SBVBenchSuite/BenchSuite/Uninterpreted/: AUF.hs  Deduce.hs  Function.hs  (+4 more)
SBVBenchSuite/Utils/: SBVBenchFramework.hs
SBVTestSuite/: SBVConnectionTest.hs  SBVDocTest.hs  SBVHLint.hs  SBVTest.hs
SBVTestSuite/GoldFiles/: U2Bridge.gold  abc_badValidate.gold  addSub.gold  adt00.gold  adt01.gold  adt02.gold  adt03.gold  adt04.gold  adt05.gold  adt06.gold  adt_chk01.gold  adt_expr00.gold  adt_expr00c.gold  adt_expr01.gold  adt_expr01c.gold  adt_expr02.gold  adt_expr02c.gold  adt_expr03.gold  adt_expr03c.gold  adt_expr04.gold  adt_expr05.gold  adt_expr06.gold  adt_expr06c.gold  adt_expr07.gold  adt_expr07c.gold  adt_expr08.gold  adt_expr08c.gold  adt_expr09.gold  adt_expr09c.gold  adt_expr10.gold  adt_expr10c.gold  adt_expr11.gold  adt_expr11c.gold  adt_expr12.gold  adt_expr12c.gold  adt_expr13.gold  adt_expr13c.gold  adt_expr14.gold  adt_expr15.gold  adt_expr16.gold  (+726 more)
SBVTestSuite/Utils/: SBVTestFramework.hs
SBVUnitTest/: SBVBasicTests.hs  SBVIntTest.hs  SBVTest.hs  SBVTestCollection.hs  SBVTestSuite.hs  SBVUnitTest.hs  SBVUnitTestBuildTime.hs
SBVUnitTest/GoldFiles/: U2Bridge.gold  addSub.gold  aes128Dec.gold  aes128Enc.gold  aes128Lib.gold  allSat1.gold  allSat3.gold  allSat4.gold  allSat5.gold  allSat6.gold  assertSoft1.gold  assertSoft2.gold  auf-1.gold  basic-1_1.gold  basic-1_2.gold  basic-1_3.gold  basic-1_4.gold  basic-1_5.gold  basic-2_1.gold  basic-2_2.gold  basic-2_3.gold  basic-2_4.gold  basic-3_1.gold  basic-3_2.gold  basic-3_3.gold  basic-3_4.gold  basic-3_5.gold  basic-4_1.gold  basic-4_2.gold  basic-4_3.gold  basic-4_4.gold  basic-4_5.gold  basic-5_1.gold  basic-5_2.gold  basic-5_3.gold  basic-5_4.gold  basic-5_5.gold  boxed1.gold  ccitt.gold  cgUninterpret.gold  (+46 more)
attic/: overflow.hs
buildUtils/: .gitignore  Makefile  appveyor.yml  checkDocSpec.hs  checkExtensions.hs  checkLinks  ci.hs  genByteConverter.hs  generateBounds.hs  hackage-docs  remLine.hs  simpHaddock.hs  simplify.hs  testInterfaces.hs  validate_links.py
(+932 files in other folders)
